<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_8dp"
    android:layout_marginEnd="@dimen/_8dp"
    android:background="@color/white"
    android:orientation="horizontal"
    app:cardCornerRadius="@dimen/_3dp"
    app:cardElevation="@dimen/_3dp"
    app:cardUseCompatPadding="true">


    <TextView
        android:id="@+id/numberTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.4"
        android:hint="@string/text_number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sp" />


    <TextView
        android:id="@+id/textTV"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100dp"
        android:layout_weight="1"
        android:hint="@string/text_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sp" />

    <TextView
        android:id="@+id/dateTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:hint="@string/text_date"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sp" />

    <CheckBox
        android:id="@+id/checkCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>